# inchand-ai-commerce-ops

./: .env.example  .gitignore  Makefile  README.md  cli  docker-compose.yml  pyproject.toml
app/: config.py
inchand_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: _smoke_config_preflight.sh  build_action_mismatch_analysis.py  build_agentic_knowledge_hint_coverage_report.py  build_agentic_preview_review_metrics_report.py  build_agentic_sandbox_graduation_report.py  build_agentic_sandbox_readiness_report.py  build_ai_assist_shadow_metrics_dashboard.py  build_assisted_mode_pilot_readiness_report.py  build_draft_quality_slice_analysis.py  build_draft_review_metrics_report.py  build_entity_extraction_investigation_report.py  build_historical_reply_benchmark.py  build_hitl_read_only_payload_sample.py  build_knowledge_chunks.py  build_operational_knowledge_inventory.py  build_operator_assisted_review_metrics_report.py  build_pilot_corpus.py  build_pilot_corpus_embeddings.py  build_privacy_review_report.py  build_replay_metrics_dashboard.py  build_shadow_retrieval_metrics_dashboard.py  build_suggested_action_calibration_report.py  check_config.py  check_console_graph_consistency.py  check_corpus_integrity.py  check_corpus_lockfile_fresh.py  check_embedding_artifact_integrity.py  check_pilot_corpus_integrity.py  check_policy_fact_extraction.py  compare_manual_vs_replay_assisted_input.py  compare_openai_baseline.py  compare_retrieval_backends.py  create_reviewer_signoff.py  db_init_pgvector.sh  db_init_pgvector_16.sh  debug_first_turn_ticket_context.py  debug_shop_identity_plumbing.py  diagnose_shadow_replay_hits.py  dry_run_sandbox_retrieval_chain.py  eval_pilot_retrieval.py  (+41 more)
tests/: conftest.py  test_action_mismatch_analysis.py  test_actionability_validation.py  test_agent_workflow_diagram.py  test_agent_workflow_docs.py  test_agentic_assisted_work_package.py  test_agentic_graph_read_only_tools.py  test_agentic_knowledge_hint_coverage_analysis.py  test_agentic_preview_review_feedback.py  test_agentic_preview_review_metrics.py  test_agentic_sandbox_batch_report.py  test_agentic_sandbox_observability.py  test_agentic_sandbox_readiness_analysis.py  test_agentic_sandbox_workflow.py  test_ai_assist_shadow_metrics_dashboard.py  test_assisted_input_parity.py  (+163 more)
(+318 files in other folders)
