[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inchand-ai"
version = "0.1.0"
description = "Inchand AI Commerce Operations Copilot (MVP skeleton)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Inchand" }]
dependencies = [
    "fastapi>=0.115",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "openai>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
