[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inchand-ai"
version = "0.1.0"
description = "Inchand AI Commerce Operations Copilot (MVP skeleton)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Inchand" }]
dependencies = [
    "jdatetime>=5.0",
    "fastapi>=0.115",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "openai>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "jdatetime>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
operator = [
    "jdatetime>=5.0",
    "streamlit>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
markers = [
    "pgvector: tests requiring a live PostgreSQL + pgvector database",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
